--- a/index.html
+++ b/index.html
@@ -52,27 +52,16 @@
               class="nav-link"
               href="/about/"
               >About</a
-            >
-            <a
-              class="nav-link"
-              href="/play/"
-              >Broadcast</a
-            >
-            <a
-              class="nav-link"
-              href="/listen/"
-              >Listen</a
-            >
-            
+            >            
           </nav>
         </div>
       </header>
 
       
 <main role="main" class="inner cover">
-  <h1 class="cover-heading">Distance.</h1>
+  <h1 class="cover-heading">Distance no longer.</h1>
   <p class="lead">
-    Keep listening to music with your friends even from a social distance.
+    Since this is now possible with the official Spotify app and I can't afford to keep running the server, this service is disabled, but you can still see the source code <a href="https://github.com/dfm/spotify-party">on GitHub</a>.
   </p>
   <p class="lead">
     <a href="/login/" class="btn btn-lg btn-secondary"
