--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <nav class="nav nav-masthead justify-content-center">
             <a
               class="nav-link"
-              href="/about/"
+              href="#"
               >About</a
             >            
           </nav>
